--- a/clockworks/sass/variables-site/_colors.scss
+++ b/clockworks/sass/variables-site/_colors.scss
@@ -2,16 +2,23 @@ $color__background-body: #fff;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
 $color__background-button: #e6e6e6;
-$color__background-pre: #eee;
+$color__background-pre: #414040;
 $color__background-ins: #fff9c0;
+
+$color__text-main: #334040;
 
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: royalblue;
-$color__link-visited: purple;
-$color__link-hover: midnightblue;
-$color__text-main: #404040;
+
+$color__link: scale-color($color__text-main, $blue: 20%);
+$color__link-visited: lighten($color__link, 20%);
+$color__link-hover: lighten($color__link, 20%);
+
+
+$color__gray_18p: darken(#ffffff, 18%);
+$color__gray_50p: darken(#ffffff, 50%);
+$color__gray_92p: darken(#ffffff, 92%);
 
 $color__border-button: #ccc #ccc #bbb;
 $color__border-button-hover: #ccc #bbb #aaa;
