getting ready for 2017.

--- a/clockworks/sass/mixins/_molotov.sass
+++ b/clockworks/sass/mixins/_molotov.sass
@@ -10,3 +10,7 @@
 
 =rhythm__padding($t:1, $l:1, $b:1, $r:1)
   padding: ($font__line-height-body * $t * 1em) ($font__line-height-body * $l * 1em) ($font__line-height-body * $b * 1em) ($font__line-height-body * $r * 1em)
+
+=flex--rows()
+  display: flex
+  flex-direction: row
