--- a/clockworks/sass/site/primary/_sticky.sass
+++ b/clockworks/sass/site/primary/_sticky.sass
@@ -6,6 +6,20 @@
 .sticky
   display: block
   +trailer()
-  +rhythm__padding(1, 2, 1, 2)
-  width: 100%
-  background: $color__background-ins
+  //+rhythm__padding(1, 2, 1, 2)
+  max-width: 100%
+  //background: $color__background-ins
+  .entry-meta
+    position: absolute
+    bottom: 4rem * $font__line-height-body
+    right: 0
+    +rhythm__padding()
+    // margin: 0 1rem
+    background-color: fade-out($color__background-body, .20)
+    min-width: 60%
+    max-width: 85%
+    // min-height: 4rem * $font__line-height-body
+
+    display: flex
+    justify-content: space-between
+    align-items: baseline
