--- a/clockworks/sass/typography/_copy.scss
+++ b/clockworks/sass/typography/_copy.scss
@@ -1,6 +1,5 @@
 p {
-	margin-bottom: 1em * $font__line-height-body;
-  max-width: 66ch;
+	margin-bottom: 1rem * $font__line-height-body;
 }
 
 dfn, cite, em, i {
