--- a/clockworks/sass/elements/_header.sass
+++ b/clockworks/sass/elements/_header.sass
@@ -7,7 +7,7 @@
   a
     color: $color__gray_18p
     &:visited
-      color: darken($color__gray_18p, 15%)
+      color: $color__gray_50p
       font-weight: 200
     &:hover,
     &:focus,
