--- a/clockworks/sass/layout/_content-sidebar.scss
+++ b/clockworks/sass/layout/_content-sidebar.scss
@@ -1,5 +1,10 @@
+.site-content {
+	display: flex;
+	justify-content: space-around;
+	flex-direction: row;
+}
 .content-area {
-	float: left;
+	// float: left;
 	margin: 0 (-$size__site-sidebar) 0 0;
 	width: $size__site-main;
 }
@@ -9,7 +14,7 @@
 }
 
 .site-content .widget-area {
-	float: right;
+	// float: right;
 	overflow: hidden;
 	width: $size__site-sidebar;
 }
@@ -17,4 +22,5 @@
 .site-footer {
 	clear: both;
 	width: $size__site-main;
+
 }
