--- a/clockworks/sass/media/_media.scss
+++ b/clockworks/sass/media/_media.scss
@@ -23,3 +23,8 @@ object {
 ## Galleries
 --------------------------------------------------------------*/
 @import "galleries";
+
+/*--------------------------------------------------------------
+## images
+--------------------------------------------------------------*/
+@import "images";
