--- a/clockworks/sass/site/primary/_entry.sass
+++ b/clockworks/sass/site/primary/_entry.sass
@@ -1,29 +1,22 @@
 .entry
   &-header
-    display: flex
-    justify-content: space-between
-    align-items: baseline
+    position: relative
   &-title
     z-index: 0
-    &:before
-      content: ""
-      background: complement($color__background-ins)
-      height: 0.25em
-      width: 120%
-      margin-left: $font__line-height-body * -1em
-      display: block
-      position: relative
-      top: 1em
-      z-index: -1
+  &-content
+    +flex--rows()
   &-footer
-    display: flex
-    justify-content: flex-start
-    > span
-      margin-right: 1em
-      margin-right: 2ch
-      &::after
-        content: "|"
-        margin-left: 1em
-        margin-left: 2ch
-        color: $color__gray_50p
-        +font-size(0.75)
+    +trailer()
+    .entry-meta
+      +flex--rows()
+      +trailer()
+      > span
+        padding: 0 2ch
+        &:first-of-type
+          padding-left: 0
+        &:last-of-type
+          padding-right: 0
+
+.single .post
+  margin: 2rem auto 0
+  width: 75%
