--- a/clockworks/sass/variables-site/_colors.scss
+++ b/clockworks/sass/variables-site/_colors.scss
@@ -7,11 +7,12 @@ $color__background-ins: #fff9c0;
 
 $color__text-main: #334040;
 
-$color__text-screen: #21759b;
+$color__text-screen: #790000;
 $color__text-input: #666;
 $color__text-input-focus: #111;
 
-$color__link: scale-color($color__text-main, $blue: 20%);
+// $color__link: scale-color($color__text-main, $red: 20%);
+$color__link: #790000;
 $color__link-visited: lighten($color__link, 20%);
 $color__link-hover: lighten($color__link, 20%);
 
