moved byline to own function, modified sticky styling.

--- a/clockworks/sass/site/primary/_sticky.sass
+++ b/clockworks/sass/site/primary/_sticky.sass
@@ -4,13 +4,11 @@
 // modifier
 
 .sticky
-  +trailer()
-  max-width: 100%
   .entry-meta
     position: relative
     .entry-title
       position: absolute
-      bottom: 2rem
+      bottom: 3rem * $font__line-height-body
       padding: 1rem 2rem
       background-color: $color__background-body
       right: 0
