--- a/clockworks/sass/mixins/_molotov.sass
+++ b/clockworks/sass/mixins/_molotov.sass
@@ -20,7 +20,7 @@
   &:before
     display: block
     content: ""
-    width: 100%
+    width: auto
     padding-top: ($height / $width) * 100%
 
   > .content
