--- a/clockworks/sass/site/primary/_posts-and-pages.scss
+++ b/clockworks/sass/site/primary/_posts-and-pages.scss
@@ -41,7 +41,7 @@ article {
 .hero {
   @include aspect-ratio(16, 9);
   width: 100%;
-  height: 80vh;
+  // height: 80vh;
   background-size: cover;
   background-position: center top;
   display: flex;
