--- a/clockworks/sass/typography/_headings.scss
+++ b/clockworks/sass/typography/_headings.scss
@@ -1,7 +1,8 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: $font__header;
+  font-weight: 700;
   letter-spacing: 0.65px;
-  margin: 0; 
+  margin: 0;
   clear: both;
 
 }
