--- a/clockworks/sass/variables-site/_typography.scss
+++ b/clockworks/sass/variables-site/_typography.scss
@@ -1,7 +1,8 @@
+$font__size_main: 16px;
 $font__main: "proxima nova", "open sans pro", helvetica, arial, roboto, sans-serif;
 $font__code: "source code pro", Courier, monospace;
 $font__pre:  "source code pro", Courier, monospace;
 $font__line-height-body: 1.25;
 $font__line-height-pre: 1.5;
 
-$font__header: "proxima nova", "open sans pro", helvetica, arial, roboto, sans-serif;
+$font__header: "brothers", "proxima nova", "open sans pro", helvetica, arial, roboto, sans-serif;;
