--- a/clockworks/sass/site/primary/_entry.sass
+++ b/clockworks/sass/site/primary/_entry.sass
@@ -8,7 +8,7 @@
   &-footer
     +trailer()
     .entry-meta
-      +flex--rows()
+      // +flex--rows()
       +trailer()
       > span
         padding: 0 2ch
