--- a/clockworks/sass/style.scss
+++ b/clockworks/sass/style.scss
@@ -97,6 +97,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # layout
 --------------------------------------------------------------*/
 @import "layout/content-sidebar";
+@import "layout/full-width";
 // @import "layout/sidebar-content";
 
 
