started front page styling.

--- a/clockworks/sass/site/_site.scss
+++ b/clockworks/sass/site/_site.scss
@@ -1,5 +1,10 @@
-// @import "../layout/content-sidebar";
-// @import "../layout/sidebar-content";
+/*--------------------------------------------------------------
+# layout
+--------------------------------------------------------------*/
+@import "layout/content-sidebar";
+@import "layout/full-width";
+// @import "layout/sidebar-content";
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
@@ -14,3 +19,8 @@
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
+/*--------------------------------------------------------------
+## front-page
+--------------------------------------------------------------*/
+@import "primary/front-page";
