--- a/clockworks/sass/elements/_header.sass
+++ b/clockworks/sass/elements/_header.sass
@@ -1,20 +1,34 @@
 // header
-.site-header
-  padding: ($font__line-height-body * 1em) ($font__line-height-body * 2em)
-  background: $color__text-main
-  color: $color__gray_18p
-  height: auto
-  a
-    color: $color__gray_18p
-    &:visited
-      color: $color__gray_50p
-      font-weight: 200
-    &:hover,
-    &:focus,
-    &:active
-      color: white
-    &:focus
-      outline: thin dotted
-    &:hover,
-    &:active
-      outline: 0
+.site
+  &-header
+    padding: ($font__line-height-body * 1em) ($font__line-height-body * 2em)
+    background: fade-out(#fff, 0.50)
+    // color: $color__gray_18p
+    height: auto
+    display: flex
+    align-items: baseline
+    position: fixed
+    top: 0
+    left: 0
+    right: 0
+    z-index: 100
+  &-branding
+    flex: 1 0 auto
+  &-title
+    @extend h1
+  &-description
+    margin: 0
+    a
+      color: $color__gray_18p
+      &:visited
+        // color: $color__gray_50p
+        font-weight: 200
+      &:hover,
+      &:focus,
+      &:active
+        color: white
+      &:focus
+        outline: thin dotted
+      &:hover,
+      &:active
+        outline: 0
