--- a/clockworks/sass/layout/_content-sidebar.scss
+++ b/clockworks/sass/layout/_content-sidebar.scss
@@ -2,15 +2,16 @@
 	display: flex;
 	justify-content: space-around;
 	flex-direction: row;
+	margin-top: 3em * $font__line-height-body
 }
 .content-area {
-	// float: left;
-	margin: 0 (-$size__site-sidebar) 0 0;
-	width: $size__site-main;
+	width: 62%;
+	width: 62vw;
+	margin-right: 1em * $font__line-height-body
 }
 
 .site-main {
-	margin: 0 $size__site-sidebar 0 0;
+	// margin: 0 $size__site-sidebar 0 0;
 }
 
 .site-content .widget-area {
