changed styles and mixins.

--- a/clockworks/sass/mixins/_molotov.sass
+++ b/clockworks/sass/mixins/_molotov.sass
@@ -6,10 +6,10 @@
 
 
 =trailer($x:1)
-  margin-bottom: $font__line-height-body * $x * 1em
+  margin-bottom: $font__line-height-body * $x * 1rem
 
 =rhythm__padding($t:1, $l:1, $b:1, $r:1)
-  padding: ($font__line-height-body * $t * 1em) ($font__line-height-body * $l * 1em) ($font__line-height-body * $b * 1em) ($font__line-height-body * $r * 1em)
+  padding: ($font__line-height-body * $t * 1rem) ($font__line-height-body * $l * 1rem) ($font__line-height-body * $b * 1rem) ($font__line-height-body * $r * 1rem)
 
 =flex--rows()
   display: flex
