--- a/clockworks/sass/navigation/_menus.sass
+++ b/clockworks/sass/navigation/_menus.sass
@@ -46,7 +46,7 @@
         &:hover, &.focus
     li
       &:hover > ul, &.focus > ul
-        color: yellow
+        // color: yellow
         left: auto
         right: 0
     ul li
@@ -65,14 +65,14 @@
 
 .menu-toggle, .main-navigation.toggled ul
   display: block
-  display: flex
+  // display: flex
 
 @media screen and (min-width: 37.5em)
   .menu-toggle
     display: none
   .main-navigation ul
     display: block
-    display: flex
+    // display: flex
 
 .site-main
   .comment-navigation, .posts-navigation, .post-navigation
