--- a/clockworks/sass/forms/_buttons.scss
+++ b/clockworks/sass/forms/_buttons.scss
@@ -1,26 +1,30 @@
+$button-color-map: (
+	default: lighten(#000, 46.7%),
+	primary: rgb(32, 32, 42),
+	success: rgb(92, 184, 92),
+	info: rgb(23, 190, 229),
+	warning: rgb(224, 204, 0),
+	danger: rgb(173, 17, 76),
+);
+
+@each $key, $value in $button-color-map {
+  .btn-#{$key} {
+    background-color: $value;
+    color: #ffffff;
+    text-shadow: 1px 1px #000;
+		&:hover, &:active, &:focus {
+			background: lighten($value, 10%);
+		}
+	}
+}
+
 button,
 input[type="button"],
 input[type="reset"],
-input[type="submit"] {
-	border: 1px solid;
-	border-color: $color__border-button;
-	border-radius: 3px;
-	background: $color__background-button;
-	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
-	color: rgba(0, 0, 0, .8);
+input[type="submit"],
+.btn {
 	@include font-size(0.75);
 	line-height: 1;
-	padding: .6em 1em .4em;
-	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
-
-	&:hover {
-		border-color: $color__border-button-hover;
-		box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), inset 0 15px 17px rgba(255, 255, 255, 0.8), inset 0 -5px 12px rgba(0, 0, 0, 0.02);
-	}
-
-	&:active,
-	&:focus {
-		border-color: $color__border-button-focus;
-		box-shadow: inset 0 -1px 0 rgba(255, 255, 255, 0.5), inset 0 2px 5px rgba(0, 0, 0, 0.15);
-	}
+	padding: 0.6em 1em 0.4em;
+	border: 0;
 }
