--- a/clockworks/sass/typography/_typography.scss
+++ b/clockworks/sass/typography/_typography.scss
@@ -5,7 +5,8 @@ select,
 textarea {
 	color: $color__text-main;
 	font-family: $font__main;
-	@include font-size(1);
+	// @include font-size(1);
+	font-size: $font__size_main;
 	line-height: $font__line-height-body;
 }
 
