--- a/clockworks/sass/navigation/_menus.sass
+++ b/clockworks/sass/navigation/_menus.sass
@@ -2,8 +2,12 @@
   clear: both
   display: block
   // display: flex
-  float: left
+  // float: left
   width: 100%
+  // landscape view
+
+  button
+    font-size: 1rem
   ul
     display: none
     list-style: none
@@ -64,26 +68,41 @@
 //* Small menu.
 
 .menu-toggle, .main-navigation.toggled ul
-  display: block
-  // display: flex
+  // display: block
+  display: flex
 
-@media screen and (min-width: 37.5em)
+@media screen and (max-width: 700px)
+  .main-navigation
+    position: fixed
+    bottom: 1em
+    left: 1em
+
+@media screen and (min-width: 700px)
+  /**
+    *  query for med+ sized screens
+    */
+  .nav-container
+    margin-left: 1em
   .menu-toggle
     display: none
-  .main-navigation ul
-    display: block
-    // display: flex
+  .main-navigation
+    // position: relative
+    ul
+      // display: block
+      display: flex
+      justify-content: space-between
 
-.site-main
-  .comment-navigation, .posts-navigation, .post-navigation
+
+
+  .site-main .comment-navigation, .posts-navigation, .post-navigation
     margin: 0 0 1.5em
     overflow: hidden
 
-.comment-navigation .nav-previous, .posts-navigation .nav-previous, .post-navigation .nav-previous
-  float: left
-  width: 50%
+  .comment-navigation .nav-previous, .posts-navigation .nav-previous, .post-navigation .nav-previous
+    float: left
+    width: 50%
 
-.comment-navigation .nav-next, .posts-navigation .nav-next, .post-navigation .nav-next
-  float: right
-  text-align: right
-  width: 50%
+  .comment-navigation .nav-next, .posts-navigation .nav-next, .post-navigation .nav-next
+    float: right
+    text-align: right
+    width: 50%
