typography responsive sm

--- a/clockworks/sass/elements/_header.sass
+++ b/clockworks/sass/elements/_header.sass
@@ -1,17 +1,17 @@
 // header
 .site
   &-header
-    padding: ($font__line-height-body * 1em) ($font__line-height-body * 2em)
+    padding: ($font__line-height-body * 1em)
     background: fade-out(#fff, 0.50)
     // color: $color__gray_18p
     height: auto
     display: flex
     align-items: baseline
-    position: fixed
-    top: 0
-    left: 0
-    right: 0
-    z-index: 100
+    // position: fixed
+    // top: 0
+    // left: 0
+    // right: 0
+    // z-index: 100
   &-branding
     flex: 1 0 auto
   &-title
