--- a/clockworks/sass/elements/_lists.scss
+++ b/clockworks/sass/elements/_lists.scss
@@ -1,5 +1,6 @@
 ul, ol {
-	margin: 0 0 1.5em 3em;
+	margin: 0.25em 0 1.25em;
+	padding: 0 0 0 1em;
 }
 
 ul {
@@ -13,7 +14,7 @@ ol {
 li > ul,
 li > ol {
 	margin-bottom: 0;
-	margin-left: 1.5em;
+	margin-left: 0;
 }
 
 dt {
