--- a/clockworks/sass/layout/_full-width.sass
+++ b/clockworks/sass/layout/_full-width.sass
@@ -4,15 +4,7 @@
   */
 .page-template-default
   .site-content
-    display: block
-    font-size: 18px
-    font-size: 1.2rem
-    line-height: 1.35
-
-  .content-area
-    margin: 3rem auto
-    width: 61%
-    width: 61vw
+    // display: block
 
   .site-main
     margin: 0
