--- a/clockworks/sass/style.scss
+++ b/clockworks/sass/style.scss
@@ -117,3 +117,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Morse
 --------------------------------------------------------------*/
 @import "elements/morse";
+
+@media screen and (min-width: 700px){
+	@import "typography/headings-lrg";
+}
