--- a/clockworks/sass/variables-site/_typography.scss
+++ b/clockworks/sass/variables-site/_typography.scss
@@ -1,5 +1,7 @@
 $font__size_main: 18px;
-$font__main: "proxima nova", "open sans pro", helvetica, arial, roboto, sans-serif;
+$font__size_main_sm: 15px;
+$font__size_main_md: 20px;
+$font__fam_main: "proxima nova", "open sans pro", helvetica, arial, roboto, sans-serif;
 $font__code: "source code pro", Courier, monospace;
 $font__pre:  "source code pro", Courier, monospace;
 $font__line-height-body: 1.25;
