mobile first typography

--- a/clockworks/sass/elements/_header.sass
+++ b/clockworks/sass/elements/_header.sass
@@ -2,16 +2,11 @@
 .site
   &-header
     padding: ($font__line-height-body * 1em)
-    background: fade-out(#fff, 0.50)
-    // color: $color__gray_18p
+    +trailer(2)
+    background: #ffffff
     height: auto
     display: flex
     align-items: baseline
-    // position: fixed
-    // top: 0
-    // left: 0
-    // right: 0
-    // z-index: 100
   &-branding
     flex: 1 0 auto
   &-title
@@ -21,7 +16,6 @@
     a
       color: $color__gray_18p
       &:visited
-        // color: $color__gray_50p
         font-weight: 200
       &:hover,
       &:focus,
