--- a/clockworks/sass/elements/_elements.scss
+++ b/clockworks/sass/elements/_elements.scss
@@ -13,14 +13,15 @@ body {
 }
 
 blockquote {
-	font-size: 2em;
+	font-size: 1.25em;
 	margin: 0;
 	font-weight: 700;
 	background: $color__gray_18p;
-	padding: 1em 2em;
-	color: $color__gray_50p;
+	padding: 1rem 0;
+	color: $color__gray_92p;
 	line-height: 1;
 	letter-spacing: 0.04em;
+	@include trailer();
 }
 
 blockquote, q {
@@ -46,5 +47,7 @@ img {
 	height: auto; /* Make sure images are scaled correctly. */
 	max-width: 100%; /* Adhere to container width. */
 }
-
+figure {
+	margin: 0;
+}
 @import "tables";
