--- a/clockworks/sass/layout/_content-sidebar.scss
+++ b/clockworks/sass/layout/_content-sidebar.scss
@@ -1,23 +1,18 @@
 .site-content {
-	display: flex;
-	justify-content: space-around;
-	flex-direction: row;
+	// display: flex;
+	// justify-content: space-around;
+	// flex-direction: column;
 	// margin-top: 3em * $font__line-height-body
 }
 .content-area {
-	width: 100%;
-	width: 100vw;
-	margin-right: 1em * $font__line-height-body
+	margin: 0 (1em * $font__line-height-body) (1em * $font__line-height-body);
 }
 
-.site-main {
-	// margin: 0 $size__site-sidebar 0 0;
-}
+.site-main {}
 
 .site-content .widget-area {
-	// float: right;
 	overflow: hidden;
-	width: $size__site-sidebar;
+	margin: 0 (1em * $font__line-height-body) (1em * $font__line-height-body);
 }
 
 .site-footer {
