--- a/clockworks/sass/layout/_flex.sass
+++ b/clockworks/sass/layout/_flex.sass
@@ -2,6 +2,8 @@
   display: flex
   &-row
     flex-direction: row
+  &-column
+    flex-direction: column
   &-just-around
     justify-content: space-around
   &-just-between
