--- a/clockworks/sass/site/primary/_posts-and-pages.scss
+++ b/clockworks/sass/site/primary/_posts-and-pages.scss
@@ -2,7 +2,7 @@
 @import "entry";
 
 .hentry {
-  @include trailer(6);
+  @include trailer(3);
 }
 
 .byline,
@@ -18,9 +18,10 @@
 .page-content,
 .single .entry-content,
 .entry-summary {
-  padding-bottom: 1em * $font__line-height-body;
-  @include trailer(1);
+  // padding-bottom: 1em * $font__line-height-body;
   border-bottom: 1px solid $color__gray_18p;
+  @include rhythm__padding(0, 1, 0, 1);
+  @include trailer();
 }
 
 .page-links {
@@ -28,25 +29,48 @@
 	margin: 0 0 1.5em;
 }
 article {
-    width: 100%;
-    @include trailer();
+  width: 100%;
+  @include trailer();
 }
 
-.single p {
-  max-width: 66ch;
+.post{
+  margin: 0;
+  @include trailer(3);
+
 }
+.single{
+  .content-area{
+    margin: 0;
+  }
+  .post{
+    p {
+      // margin-left: 1em;
+      // margin-right: 1em;
+      // max-width: 66ch;
+    }
+  }
+
+}
+
 .hero {
   @include aspect-ratio(16, 9);
+  @include trailer(2);
   width: 100%;
-  background-size: cover;
-  background-position: center top;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  // background-size: cover;
+  // background-position: center top;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
   .entry-title {
-    @include rhythm__padding(1, 2, 1, 2);
+    @include rhythm__padding();
+    margin: 1.25em 0;
     background-color: fade-out($color__gray_18p, 0.30);
     border: 2px solid;
   }
 
+}
+.page {
+  &-header {
+    @include trailer();
+  }
 }
