--- a/clockworks/sass/mixins/_molotov.sass
+++ b/clockworks/sass/mixins/_molotov.sass
@@ -29,3 +29,6 @@
     left: 0
     right: 0
     bottom: 0
+
+=body-block-margin()
+  margin: ($font__line-height-body - 1 * 1em ) 0 (1em * $font__line-height-body)
