--- a/clockworks/sass/typography/_typography.scss
+++ b/clockworks/sass/typography/_typography.scss
@@ -6,7 +6,7 @@ textarea {
 	text-size-adjust: 100%;
 	color: $color__text-main;
 	font-family: $font__fam-main;
-	font-size: $font__size_main_sm;
+	font-size: $font__size_main;
 	line-height: $font__line-height-body;
 }
 
