--- a/clockworks/sass/elements/_elements.scss
+++ b/clockworks/sass/elements/_elements.scss
@@ -15,13 +15,13 @@ body {
 blockquote {
 	font-size: 1.25em;
 	margin: 0;
-	font-weight: 700;
+	// font-weight: 700;
 	background: $color__gray_18p;
 	padding: 1rem 0;
 	color: $color__gray_92p;
 	line-height: 1;
 	letter-spacing: 0.04em;
-	@include trailer();
+	@include body-block-margin();
 }
 
 blockquote, q {
@@ -36,8 +36,8 @@ blockquote, q {
 hr {
 	background-color: $color__background-hr;
 	border: 0;
-	height: 1px;
-	margin-bottom: 1.5em;
+	height: (0.25 * $font__size_main);
+	@include body-block-margin();
 }
 
 @import "header";
