--- a/clockworks/sass/typography/_headings-lrg.scss
+++ b/clockworks/sass/typography/_headings-lrg.scss
@@ -1,13 +1,4 @@
-h1, h2, h3, h4, h5, h6 {
-  font-family: $font__header;
-  font-weight: 700;
-  letter-spacing: 0.65px;
-  margin: 0;
-  clear: both;
-  margin: ($font__line-height-body - 1 * 1em ) 0 (1rem * $font__line-height-body);
-  // @include trailer();
-
-}
+h1, h2, h3, h4, h5, h6 {}
 h1 {
   @include font-size(2.5);
   line-height: 45px;
@@ -32,10 +23,4 @@ h6 {
   @include font-size(1);
   line-height: 22.5px;
 }
-.site-title {
-  line-height: 1.0;
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
-}
+.site-title {}
