--- a/clockworks/sass/typography/_headings.sass
+++ b/clockworks/sass/typography/_headings.sass
@@ -1,31 +1,31 @@
 h1, h2, h3, h4, h5, h6
   letter-spacing: 0.65px
-  margin: ($font__line-height-body - 1 * 1em ) 0 0 0
+  margin: ($font__line-height-body - 1 * 1em ) 0 0
+  font-family: $font__fam_header
+  font-weight: 500
+  letter-spacing: 0.65px
+  clear: both
 
 h1
-  font-size: 20px
-  line-height: 1
+  +font-size(1.625)
+  line-height: 1.057692308
 
 h2
-  font-size: 19px
-  line-height: 1
+  +font-size(1.5)
+  line-height: 1.022727273
 
 h3
-  font-size: 18px
-  line-height: 1
+  +font-size(1.375)
+  line-height: 1.022727273
 
 h4
-  font-size: 17px
-  line-height: 1
+  +font-size(1.25)
+  line-height: 1.25
 
 h5
-  font-size: 16px
-  line-height: 1
+  +font-size(1.125)
+  line-height: 1.111111111
 
 h6
-  font-size: 1rem
-  line-height: 1
-
-.site-title a
-  text-decoration: none
-  color: inherit
+  +font-size(1)
+  line-height: $font__line-height-body
