--- a/clockworks/sass/variables-site/_typography.scss
+++ b/clockworks/sass/variables-site/_typography.scss
@@ -1,10 +1,11 @@
-$font__size_main: 18px;
-$font__size_main_sm: 15px;
-$font__size_main_md: 18px;
-$font__fam_main: "proxima nova", "open sans pro", helvetica, arial, roboto, sans-serif;
-$font__code: "source code pro", Courier, monospace;
-$font__pre:  "source code pro", Courier, monospace;
-$font__line-height-body: 1.4;
+$font__size_main: 16px;
+$font__size_main_med: 18px;
+$font__size_main_lrg: 20px;
+
+$font__fam_main: "proxima nova", "source sans pro", helvetica, arial, roboto, sans-serif;
+$font__fam_code: "source code pro", Courier, monospace;
+$font__fam_pre:  "source code pro", Courier, monospace;
+$font__line-height-body: 1.6;
 $font__line-height-pre: 1.5;
 
-$font__header: "brothers", "proxima nova", "open sans pro", helvetica, arial, roboto, sans-serif;;
+$font__fam_header: "brothers ot", "proxima nova", "source sans pro", helvetica, arial, roboto, sans-serif;;
