--- a/clockworks/sass/modules/_alignments.scss
+++ b/clockworks/sass/modules/_alignments.scss
@@ -14,3 +14,10 @@
 	clear: both;
 	@include center-block;
 }
+
+.content-margin {
+	margin: {
+		left: (0.5rem * $font__line-height-body);
+		right: (0.5rem * $font__line-height-body);
+	}
+}
