--- a/clockworks/sass/variables-site/_typography.scss
+++ b/clockworks/sass/variables-site/_typography.scss
@@ -8,4 +8,4 @@ $font__fam_pre:  "source code pro", Courier, monospace;
 $font__line-height-body: 1.6;
 $font__line-height-pre: 1.5;
 
-$font__fam_header: "brothers ot", "proxima nova", "source sans pro", helvetica, arial, roboto, sans-serif;;
+$font__fam_header: brandon-grotesque, "proxima nova", "source sans pro", helvetica, arial, roboto, sans-serif;;
