--- a/clockworks/sass/mixins/_molotov.sass
+++ b/clockworks/sass/mixins/_molotov.sass
@@ -32,5 +32,5 @@
 
 =body-block-margin($f: 1)
   margin:
-    top: ($font__line-height-body - 1 * $f * 1rem )
-    bottom: ( $f * 1rem * $font__line-height-body)
+    top: ($f * 1rem) * ($font__line-height-body - 1 )
+    bottom: ($f * 1rem) * $font__line-height-body
