--- a/clockworks/sass/site/primary/_entry.sass
+++ b/clockworks/sass/site/primary/_entry.sass
@@ -36,9 +36,9 @@
       &:last-of-type
         padding-right: 0
 
-.portfolio
-  .entry-header
-    margin: 0
+
+.home .entry-header
+  margin: 0
   &-nav
     ul
       padding: 0
