home grid and project pages done.

--- a/clockworks/sass/elements/_header.sass
+++ b/clockworks/sass/elements/_header.sass
@@ -5,10 +5,10 @@
     background: #ffffff
     a
       text-decoration: none
-      color: inherit
+      // color: inherit
   &-branding
-    box-sizing: border-box
-    // flex: 1 0 auto
+    @extend %wrapper
+    @extend %block-center
   &-title
     @extend h1
 
