--- a/clockworks/sass/typography/_headings.sass
+++ b/clockworks/sass/typography/_headings.sass
@@ -29,3 +29,11 @@ h5
 h6
   +font-size(1.125)
   line-height: $font__line-height-body
+
+.header-underline
+  display: inline-block
+  border-bottom: 0.125em solid $color__text-screen
+  padding:
+    right: 1em
+    right: 1ch
+    bottom: 0.125rem
