--- a/clockworks/sass/layout/_content-sidebar.scss
+++ b/clockworks/sass/layout/_content-sidebar.scss
@@ -1,18 +1,18 @@
-.site-content {
-	// display: flex;
-	// justify-content: space-around;
-	// flex-direction: column;
-	// margin-top: 3em * $font__line-height-body
-}
-.content-area {
-	// margin: 0 (1em * $font__line-height-body) (1em * $font__line-height-body);
+.site-content {}
+.content-area {}
+.content-margin {
+	@include block-center();
+	margin: {
+		left: (0.5rem * $font__line-height-body);
+		right: (0.5rem * $font__line-height-body);
+	}
 }
 
 .site-main {}
 
 .site-content .widget-area {
 	overflow: hidden;
-	margin: 0 (1em * $font__line-height-body) (1em * $font__line-height-body);
+	margin: 0 (1em * $font__line-height-body) ( 1em  * $font__line-height-body);
 }
 
 .site-footer {
@@ -28,4 +28,17 @@
 		}
 	}
 
+}
+
+.wrapper {
+	@include wrapper();
+	@include block-center();
+}
+
+@media screen and (min-width: $res__break-point-1) {
+	.site-content {
+		// width: 40em
+		max-width: 100vw;
+		margin: 0 auto;
+	}
 }
