--- a/clockworks/sass/media/_galleries.scss
+++ b/clockworks/sass/media/_galleries.scss
@@ -7,6 +7,7 @@
 	text-align: center;
 	vertical-align: top;
 	width: 100%;
+	@include body-block-margin();
 
 	.gallery-columns-2 & {
 		max-width: 50%;
