--- a/clockworks/sass/navigation/_menus.sass
+++ b/clockworks/sass/navigation/_menus.sass
@@ -1,7 +1,11 @@
 .main-navigation
-  clear: both
+  // clear: both
   display: block
   width: 100%
+  position: fixed
+  bottom: 1em
+  left: 1em
+  z-index: 100
 
   button
     font-size: 1rem
@@ -9,7 +13,7 @@
     display: none
     list-style: none
     margin: 0
-    padding-left: 0
+    // padding-left: 0
   li
     float: left
     position: relative
@@ -29,25 +33,21 @@
       left: -999em
       top: 0
     a
-      // width: 200px
-      width: auto
       padding-left: 1em
       padding-right: 1em
-
-      display: inline-block
+      // display: inline-block
     li
   li
     &:hover > a, &.focus > a
   ul
     ul
-      \:hover > a, .focus > a
+      &:hover > a, .focus > a
         // submenu visible
         display: block
       a
         &:hover, &.focus
     li
       &:hover > ul, &.focus > ul
-        // color: yellow
         left: auto
         right: 0
     ul li
@@ -59,24 +59,28 @@
   display: flex
   justify-content: space-around
   align-items: baseline
+  flex-flow: column wrap
+  background: $color__gray_50p
+  position: fixed
+  left: 0
+  right: 0
+  bottom: 0
+  padding:
+    top: 0.8rem
+    right: 0.8rem
+    bottom: 1.6rem
+    left: 0.8rem
 
 // child menus.
 
 //* Small menu.
 
 .menu-toggle, .main-navigation.toggled ul
-  // display: block
   display: flex
   flex-flow: column wrap
 
 
-@media screen and (max-width: 700px)
-  .main-navigation
-    position: fixed
-    bottom: 1em
-    left: 1em
-
-@media screen and (min-width: 700px)
+@media screen and (min-width: 60em)
   /**
     *  query for med+ sized screens
     */
@@ -85,9 +89,8 @@
   .menu-toggle
     display: none
   .main-navigation
-    // position: relative
+    position: relative
     ul
-      // display: block
       display: flex
       justify-content: space-between
 
