--- a/clockworks/sass/site/secondary/_widgets.sass
+++ b/clockworks/sass/site/secondary/_widgets.sass
@@ -1,22 +1,32 @@
 .widget
 	+body-block-margin()
-	/* Make sure select elements fit in widgets. */
+	/**
+		*  Make sure select elements fit in widgets.
+		*/
 	select
 		max-width: 100%
 	&-title
-    +trailer(0.25)
+		+trailer(0.25)
+		text-align: center
 
 .widget-site-footer-container
 	display: flex
-	flex-flow: column
-  +body-block-margin()
-  text-align: center
-  ul
-    padding: 0
-  .genericon
-    font-size: 2em
+	flex-flow: column wrap
+	+body-block-margin()
+	ul
+		padding: 0
+
 
 .widget_calendar
-	max-width: 14em
+	max-width: 300px
+	width: 80vw
+	margin-left: auto
+	margin-right: auto
 	th, td
 		text-align: right
+	tfoot
+		padding-top: 1em
+
+@media screen and (min-width: $res__break-point-1) 
+	.widget-site-footer-container
+		flex-flow: row wrap
