--- a/clockworks/sass/typography/_copy.scss
+++ b/clockworks/sass/typography/_copy.scss
@@ -7,11 +7,7 @@ dfn, cite, em, i {
 	font-style: italic;
 }
 
-blockquote {
-	@include body-block-margin();
-}
-
-address {
+blockquote, address {
 	@include body-block-margin();
 }
 
