--- a/clockworks/sass/typography/_typography.scss
+++ b/clockworks/sass/typography/_typography.scss
@@ -7,6 +7,7 @@ textarea {
 	color: $color__text-main;
 	font-family: $font__fam-main;
 	font-size: $font__size_main;
+	font-size: calc(14px + 0.5vw);
 	line-height: $font__line-height-body;
 }
 
