--- a/clockworks/sass/site/primary/_entry.sass
+++ b/clockworks/sass/site/primary/_entry.sass
@@ -19,7 +19,7 @@
 
 .entry-footer
   +body-block-margin()
-  +rhythm__padding()
+  +rhythm__padding(1, 0.5, 1, 0.5)
   background: $color__gray_50p
   color: $color__background-screen
   a
