--- a/clockworks/sass/site/secondary/_widgets.sass
+++ b/clockworks/sass/site/secondary/_widgets.sass
@@ -12,6 +12,7 @@
 .widget-site-footer-container
 	display: flex
 	flex-flow: column wrap
+	justify-content: center
 	+body-block-margin()
 	ul
 		padding: 0
@@ -27,6 +28,6 @@
 	tfoot
 		padding-top: 1em
 
-@media screen and (min-width: $res__break-point-1) 
+@media screen and (min-width: $res__break-point-2)
 	.widget-site-footer-container
 		flex-flow: row wrap
