--- a/clockworks/sass/elements/_header.sass
+++ b/clockworks/sass/elements/_header.sass
@@ -3,6 +3,12 @@
   &-header
     padding: ($font__line-height-body * 0.5em)
     background: #ffffff
+    & > .wrapper
+      @media screen and (min-width: $res__break-point-3)
+        display: flex
+        align-items: baseline
+        justify-content: space-between
+
     a
       text-decoration: none
       // color: inherit
