--- a/clockworks/sass/media/_galleries.scss
+++ b/clockworks/sass/media/_galleries.scss
@@ -1,5 +1,5 @@
 .gallery {
-	margin-bottom: 1.5em;
+	@extend .project-gallery;
 }
 
 .gallery-item {
@@ -11,34 +11,42 @@
 
 	.gallery-columns-2 & {
 		max-width: 50%;
+		flex-basis: 50%;
 	}
 
 	.gallery-columns-3 & {
 		max-width: 33.33%;
+		flex-basis: 33.33%;
 	}
 
 	.gallery-columns-4 & {
 		max-width: 25%;
+		flex-basis: 25%;
 	}
 
 	.gallery-columns-5 & {
 		max-width: 20%;
+		flex-basis: 20%;
 	}
 
 	.gallery-columns-6 & {
 		max-width: 16.66%;
+		flex-basis: 16.66%;
 	}
 
 	.gallery-columns-7 & {
 		max-width: 14.28%;
+		flex-basis: 14.28%;
 	}
 
 	.gallery-columns-8 & {
 		max-width: 12.5%;
+		flex-basis: 12.5%;
 	}
 
 	.gallery-columns-9 & {
 		max-width: 11.11%;
+		flex-basis: 11.11%;
 	}
 }
 
