--- a/clockworks/sass/variables-site/_structure.scss
+++ b/clockworks/sass/variables-site/_structure.scss
@@ -6,17 +6,23 @@ $res__break-point-2: 40em;
 $res__break-point-3: 50em;
 $res__break-point-4: 60em;
 
-%wrapper {
+@mixin wrapper() {
 	max-width: 100%;
 	@media screen and (min-width: $res__break-point-1){
-		width: $res__break-point-1 - 5;
+		width: $res__break-point-1 - 2;
 	}
 	@media screen and (min-width: $res__break-point-2){
-		width: calc(100vw - 6em);
+		width: $res__break-point-1;
 	}
 	@media screen and (min-width: $res__break-point-3){
-		width: ceil($res__break-point-3 * 0.75);
+		width: $res__break-point-2;
 	}
+	@media screen and (min-width: $res__break-point-4){
+		width: $res__break-point-3;
+	}
+}
+%wrapper {
+@include wrapper()
 }
 
 %block-center {
@@ -25,18 +31,8 @@ $res__break-point-4: 60em;
 		right: auto;
 	}
 }
-@mixin wrapper() {
-	max-width: 100%;
-	@media screen and (min-width: $res__break-point-1){
-		width: $res__break-point-1 - 5;
-	}
-	@media screen and (min-width: $res__break-point-2){
-		width: calc(100vw - 6em);
-	}
-	@media screen and (min-width: $res__break-point-3){
-		width: ceil($res__break-point-3 * 0.75);
-	}
-}
+
+
 @mixin block-center() {
 	@media screen and (min-width: $res__break-point-1){
 		margin:{
