front page changes

--- a/clockworks/sass/elements/_header.sass
+++ b/clockworks/sass/elements/_header.sass
@@ -13,8 +13,8 @@
       text-decoration: none
       // color: inherit
   &-branding
-    @extend %wrapper
-    @extend %block-center
+    // @extend %wrapper
+    // @extend %block-center
     flex: 1 0 33%
   &-title
     @extend h1
