--- a/clockworks/sass/site/secondary/_widgets.sass
+++ b/clockworks/sass/site/secondary/_widgets.sass
@@ -5,9 +5,8 @@
 		*/
 	select
 		max-width: 100%
-	&-title
+	&-title, &title
 		+trailer(0.25)
-		text-align: center
 
 .widget-site-footer-container
 	display: flex
