--- a/clockworks/sass/forms/_fields.scss
+++ b/clockworks/sass/forms/_fields.scss
@@ -1,3 +1,7 @@
+form div {
+	@include trailer();
+}
+
 input[type="text"],
 input[type="email"],
 input[type="url"],
@@ -14,9 +18,12 @@ input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"],
 textarea {
+	background: transparent;
 	color: $color__text-input;
-	border: 1px solid $color__border-input;
-	border-radius: 3px;
+	// border: 1px solid $color__border-input;
+	border: 0;
+	border-bottom: 2px solid $color__gray_92p;
+	// border-radius: 3px;
 
 	&:focus {
 		color: $color__text-input-focus;
@@ -42,10 +49,11 @@ input[type="time"],
 input[type="datetime"],
 input[type="datetime-local"],
 input[type="color"] {
-	padding: 3px;
+	padding: 0.25em;
 }
 
 textarea {
-	padding-left: 3px;
+	padding-left: 0.25em;
 	width: 100%;
+	border: 1px solid;
 }
