--- a/clockworks/sass/media/_images.sass
+++ b/clockworks/sass/media/_images.sass
@@ -2,3 +2,12 @@ img.featured-image
   max-width: 100%
   display: block
   +trailer()
+
+.box-shadow
+  box-shadow: 2px 2px 2px 1px fade-out($color__gray_50p, 0.2)
+
+.gray
+  filter: grayscale(100%)
+  &:hover
+    filter: grayscale(0)
+    transition: all 200ms
