--- a/clockworks/sass/navigation/_menus.scss
+++ b/clockworks/sass/navigation/_menus.scss
@@ -1,100 +1,82 @@
 .main-navigation {
-
-	font-size: 1rem;
-
+	// font-size: 1rem;
 	clear: both;
 	display: block;
-	// width: 100%;
-}
 
-.main-navigation ul {
-	display: none;
-	list-style: none;
-	// margin: 0;
-	padding-left: 0;
-}
-
-.main-navigation li {
-	position: relative;
-}
-
-.main-navigation ul ul {
-	display: none;
-	margin-left: 0.8em;
-}
-
-.main-navigation a {
-	position: relative;
-	display: block;
-	padding: 0.8em 1em;
-	font-weight: 400;
-	text-decoration: none;
-	line-height: 1.6;
-	color: white;
-}
-.main-navigation.toggled {
-	position: fixed;
-	bottom: 0;
-	// @include rhythm__padding();
-	padding-bottom: 1.6em;
-	z-index: 50;
-
-
-}
-.main-navigation.toggled ul {
-	max-height: calc(100vh - 8em);
-	overflow-y: auto;
-}
-
-.main-navigation.toggled ul ul {
-	display: none;
-}
-
-.main-navigation.toggled ul ul.toggled-on,
-.main-navigation.toggled ul ul.toggled-on > ul {
-	display: block;
-}
-
-.main-navigation a:hover,
-.main-navigation a:focus {
-	background: $color__gray_92p;
-	color: $color__gray_18p;
-}
-
-.main-navigation a,
-.main-navigation ul ul li:lastchild a {
-	border-bottom: 1px solid white;
-}
-
-.main-navigation ul li:last-child a {
-	border-bottom: none;
-}
-
-.main-navigation ul .toggled-on {
-	display: block;
-}
-
-.main-navigation li {
-	border-top: 1px solid #eaeaea;
-	border-top: 1px solid rgba(51, 51, 51, 0.1);
-	position: relative;
-}
-
-.main-navigation .current-menu-item > a,
-.main-navigation .current-menu-ancestor > a,
-.main-navigation .current_page_item > a,
-.main-navigation .current_page_ancestor > a {
-	font-weight: 700;
-}
-
-.main-navigation .nav-menu > ul > li:first-child,
-.main-navigation .nav-menu > li:first-child {
-	border-top: 0;
-}
-
-.main-navigation .menu-item-has-children > a,
-.main-navigation .page_item_has_children > a{
-	padding-right: 48px;
+	ul {
+		display: none;
+		list-style: none;
+		padding-left: 0;
+		ul {
+			display: none;
+			margin-left: 0.8em;
+		}
+	}
+	li {
+		position: relative;
+	}
+	a {
+		position: relative;
+		display: block;
+		padding: 0.8em 1em;
+		font-weight: 400;
+		text-decoration: none;
+		line-height: 1.6;
+		color: white;
+	}
+	&.toggled {
+		position: fixed;
+		bottom: 0;
+		padding-bottom: 1.6em;
+		z-index: 50;
+		ul {
+			max-height: calc(100vh - 8em);
+			overflow-y: auto;
+			ul {
+				display: none;
+				&.toggled-on {
+					display: block;
+					> ul {
+						display: block;
+					}
+				}
+			}
+		}
+	}
+	a {
+		&:hover, &:focus {
+			background: black;
+			color: lightgray;
+		}
+		border-bottom: 1px solid white;
+	}
+	ul {
+		ul li:lastchild a {
+			border-bottom: 1px solid white;
+		}
+		li:last-child a {
+			border-bottom: none;
+		}
+		.toggled-on {
+			display: block;
+		}
+	}
+	li {
+		border-top: 1px solid #eaeaea;
+		border-top: 1px solid rgba(51, 51, 51, 0.1);
+		position: relative;
+	}
+	.current-menu-item > a, .current-menu-ancestor > a, .current_page_item > a, .current_page_ancestor > a {
+		font-weight: 700;
+	}
+	.nav-menu > {
+		ul > li:first-child, li:first-child {
+			border-top: 0;
+		}
+	}
+	.menu-item-has-children > a, .page_item_has_children > a {
+		padding-right: 48px;
+	}
 }
 
 .no-js .main-navigation ul ul {
@@ -102,53 +84,48 @@
 }
 
 .nav-menu {
-	background: $color__gray_92p;
+	background: black;
 }
 
 .dropdown-toggle {
 	text-align: center;
 	font-family: 'FontAwesome';
-	background-color: transparent;
+	background-color: black;
 	border: 0;
 	box-sizing: content-box;
 	content: "";
 	padding: 0;
 	position: absolute;
-	text-transform: lowercase; /* Stop screen readers to read the text as capital letters */
+	text-transform: lowercase;
+	/* Stop screen readers to read the text as capital letters */
 	top: 1em;
 	right: 0.6em;
 	width: 2em;
 	height: 2em;
-}
-
-.dropdown-toggle:after {
-	color: white;
-	content: "\f078";
-	// line-height: 42px;
-	position: relative;
-	top: 0;
-	left: 1px;
-	width: 42px;
-}
-
-.dropdown-toggle:hover,
-.dropdown-toggle:focus {
-	// color: #eaeaea;
-	background-color: $color__gray_92p;
-}
-
-.dropdown-toggle:focus {
-	outline: 1px solid #c1c1c1;
-	outline: 1px solid rgba(51, 51, 51, 0.3);
-}
-
-.dropdown-toggle.toggle-on:after {
-	content: "\f077";
+	&:after {
+		color: white;
+		content: "\f078";
+		position: relative;
+		top: 0;
+		left: 1px;
+		width: 42px;
+	}
+	&:hover {
+		background-color: black;
+	}
+	&:focus {
+		background-color: black;
+		outline: 1px solid #c1c1c1;
+		outline: 1px solid rgba(51, 51, 51, 0.3);
+	}
+	&.toggle-on:after {
+		content: "\f077";
+	}
 }
 
 /* Small menu. */
-.menu-toggle,
-.main-navigation.toggled ul {
+
+.menu-toggle, .main-navigation.toggled ul {
 	display: block;
 }
 
@@ -156,22 +133,20 @@
 	position: fixed;
 	z-index: 100;
 	bottom: 1em;
-	// left: 1em * $font__line-height-body;
 	transition: all ease-out 250ms;
 	&.hide {
 		bottom: -2.5em;
-
 	}
 }
+
 .toggled .menu-toggle.hide {
-	bottom: 1em
+	bottom: 1em;
 }
 
-
-
-.menu-toggle:hover,
-.menu-toggle:focus {
-	text-decoration: underline;
+.menu-toggle {
+	&:hover, &:focus {
+		text-decoration: underline;
+	}
 }
 
 @media screen and (min-width: 50em) {
@@ -196,146 +171,139 @@
 	bottom: 0;
 	// padding: 1em;
 	z-index: 1;
-}
-
-.main-navigation.toggled ul {
-	max-height: calc(100vh - 8em);
-	overflow-y: auto;
-}
-
-.main-navigation.toggled ul ul {
-	display: none;
-}
-
-.main-navigation.toggled ul ul.toggled-on,
-.main-navigation.toggled ul ul.toggled-on > ul {
-	display: block;
+	ul {
+		max-height: calc(100vh - 8em);
+		overflow-y: auto;
+		ul {
+			display: none;
+			&.toggled-on {
+				display: block;
+				> ul {
+					display: block;
+				}
+			}
+		}
+	}
 }
 
 /* Horizontal menu on wide screens */
 @media screen and (min-width: 50em) {
-
 	/* Position the menu in the header */
-	.main-navigation,
-	.main-navigation.toggled {
+	.main-navigation {
 		position: relative;
 		min-height: 3.5em;
 		max-width: 58em;
 		margin: 0 auto;
-		// padding: 0 3.5em;
-		// background-color: #000;
 		color: black;
-		// background-color: hsla(0, 0%, 0%, .7);
+		&.toggled {
+			position: relative;
+			min-height: 3.5em;
+			max-width: 58em;
+			margin: 0 auto;
+			color: black;
+		}
 	}
-
 	.nav-menu {
 		margin: 0;
 		padding: .3em 0 0 0;
 		background-color: transparent;
 	}
-
-	.main-navigation ul,
-	.main-navigation.toggled ul {
-		max-height: none;
-		padding-left: 0;
-		text-align: center;
+	.main-navigation {
+		ul {
+			max-height: none;
+			padding-left: 0;
+			text-align: center;
+		}
+		&.toggled ul {
+			max-height: none;
+			padding-left: 0;
+			text-align: center;
+			overflow-y: visible;
+		}
+		li {
+			display: inline-block;
+			border: none;
+		}
+		ul ul {
+			outline: 1px solid #333;
+		}
+		li li {
+			display: block;
+			text-align: left;
+		}
+		a {
+			border-bottom: none;
+			color: inherit;
+		}
+		ul ul li:last-child a {
+			color: white;
+		}
+		a {
+			&:hover, &:focus {
+				background: transparent;
+				color: black;
+				text-decoration: underline;
+				outline: solid 1px #b3b3b3;
+			}
+		}
+		li li a {
+			&:hover, &:focus {
+				// background: #333;
+				color: #000;
+				text-decoration: underline;
+			}
+		}
+		ul ul {
+			&.toggled-on {
+				position: absolute;
+				width: 12em;
+				display: block;
+				z-index: 10;
+				margin-left: 0;
+				background: #000;
+			}
+			ul {
+				&.toggled-on {
+					position: relative;
+				}
+				a {
+					padding-left: 2em;
+				}
+			}
+		}
 	}
-
-	.main-navigation.toggled ul {
-		overflow-y: visible;
-	}
-
 	/* Display the menu items in a horizontal order */
-	.main-navigation li {
-		display: inline-block;
-		border: none;
-	}
-
 	/* Add an outline to the drop-down menus */
-	.main-navigation ul ul {
-		outline: 1px solid #333;
-	}
-
 	/* Left-align drop-down menu items */
-	.main-navigation li li {
-		display: block;
-		text-align: left;
-	}
-
-	.main-navigation a {
-		border-bottom: none;
-		color: inherit;
-	}
-	.main-navigation ul ul li:last-child a {
-		color: white;
-	}
-
 	/* Add an outline on hovered and focused menu items */
-	.main-navigation a:hover,
-	.main-navigation a:focus {
-		background: transparent;
-		color: $color__gray_92p;
-		text-decoration: underline;
-		outline: solid 1px #b3b3b3;
-	}
-
 	/* Create hover and focus contrast on drop-down items */
-	.main-navigation li li a:hover,
-	.main-navigation li li a:focus {
-		// background: #333;
-		color: #000;
-		text-decoration: underline;
-	}
-
 	/* Position drop-down menus absolutely */
-	.main-navigation ul ul.toggled-on {
-		position: absolute;
-		width: 12em;
-		display: block;
-		z-index: 10;
-		margin-left: 0;
-		background: #000;
-	}
-
-	.main-navigation ul ul ul.toggled-on {
-		position: relative;
-	}
-
 	/* Indent 3rd level drop-down menus */
-	.main-navigation ul ul ul a {
-		padding-left: 2em;
-	}
-
 	/* Simplify the drop-down toggle */
 	.dropdown-toggle {
-		// top: 0.6em;
 		border: none;
-		background: $color__gray_92p;
-	}
+		// background: $color__gray_92p;
+		&::after {
+			// line-height: 27px;
+			// width: 27px;
 
-	.dropdown-toggle::after {
-		// line-height: 27px;
-		// width: 27px;
+		}
 	}
 }
 
-.site-main .comment-navigation,
-.site-main .posts-navigation,
-.site-main .post-navigation {
-	margin: 0 0 1.5em;
-	overflow: hidden;
+.site-main {
+	.comment-navigation, .posts-navigation, .post-navigation {
+		margin: 0 0 1.5em;
+		overflow: hidden;
+	}
 }
 
-.comment-navigation .nav-previous,
-.posts-navigation .nav-previous,
-.post-navigation .nav-previous {
+.comment-navigation .nav-previous, .posts-navigation .nav-previous, .post-navigation .nav-previous {
 	float: left;
 	width: 50%;
 }
 
-.comment-navigation .nav-next,
-.posts-navigation .nav-next,
-.post-navigation .nav-next {
+.comment-navigation .nav-next, .posts-navigation .nav-next, .post-navigation .nav-next {
 	float: right;
 	text-align: right;
 	width: 50%;
